# t3router

./: .env.example  .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  Cargo.toml  Dockerfile  LICENSE  README.md
.github/workflows/: publish.yml
examples/: basic_usage.rs  chat.rs  check_usage.rs  fable5_credits.rs  image_generation.rs  list_history.rs  list_models.rs  multi_message.rs
src/: lib.rs
src/t3/: client.rs  config.rs  history.rs  message.rs  mod.rs  models.rs  repl.rs  session.rs  usage.rs
